Changed vertical-alignment on homepage tiles to fix vertical padding issue.

--- a/docs/src/css/sass/ds-site-global.scss
+++ b/docs/src/css/sass/ds-site-global.scss
@@ -91,6 +91,7 @@ a.tile-link {
     border: 1px solid #D4D4D7;
 
     div.content-tile-header {
+      vertical-align: top;
       font-size: 14px;
       border: 1px solid ;
       font-weight: 400;
